--- a/scss/sections/about.scss
+++ b/scss/sections/about.scss
@@ -42,7 +42,7 @@
        @include phone {
        font-size: rem(50px);
        padding-top: rem(0px);
-       margin-bottom: rem(90px);
+       margin-bottom: rem(0px);
     }
 
 }
